fix: log doesn't align with other section of the footer(#2413) (#2420)

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -15,6 +15,12 @@ article p img {
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
 
+@media only screen and (max-width: 735px) {
+  .nav-footer .sitemap .nav-home {
+    margin-left: -10px;
+  }
+}
+
 @media only screen and (min-width: 1024px) {
 }
 
